# poptalk

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio/: store.rs
src-tauri/src/diarization/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/llm/: chat.rs
src-tauri/src/models/: mod.rs
src-tauri/src/whisper/: mod.rs  realtime.rs
src/components/: ChatPanel.tsx  ExportButtons.tsx  SessionList.tsx  SpeakerEditor.tsx  TranscriptLine.tsx
src/views/: SessionView.tsx  SettingsView.tsx
