[package]
name = "poptalk-app"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "poptalk_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
cpal = "0.15"
hound = "3.5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
dirs = "6"
genpdf = "0.2"
whisper-rs = "0.16"
sherpa-rs = { version = "0.6", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1", features = ["async"] }

# Compile whisper.cpp and sherpa-onnx with full optimizations even in dev mode.
# Without this, inference is 10-20x slower and WHISPER_DEBUG spams logs.
[profile.dev.package.whisper-rs-sys]
opt-level = 3

[profile.dev.package.sherpa-rs-sys]
opt-level = 3

